[package]
name = "tor"
version = "0.0.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A tor library for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rust-tor"
keywords = [ "crypto", "bitcoinmw", "tor" ]
readme = "README.md"
exclude = ["**/*.tor", "**/*.tor"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["tcp", "controller", "util", "config"]

[[bin]]
name = "tor"
path = "src/bin/tor.rs"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
chrono = "0.4"
num-format = "0.4.0"

tor_util = { path = "./util", version = "0.0.1" }
tor_config = { path = "./config", version = "0.0.1" }
tor_tcp = { path = "./tcp", version = "0.0.1" }
tor_controller = { path = "./controller", version = "0.0.1" }
tor-rtcompat = { path= "./tor-rtcompat", features=["tokio"] }


[build-dependencies]
built = { version = "0.4", features = ["git2"]}

