[package]
name = "tor_tcp"
version = "0.0.1"
authors = ["BMW Developers"]
description = "Tor TCP library"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rust-tor"
keywords = [ "crypto", "tor", "mimblewimble" ]
exclude = ["**/*.tor", "**/*.tor"]
edition = "2018"

[dependencies]

tor_util = { path = "../util", version = "0.0.1" }
tor_error = { path = "../error", version = "0.0.1" }
tor_config = { path = "../config", version = "0.0.1" }
