[package]
name = "tor_tcp"
version = "0.0.1"
authors = ["BMW Developers"]
description = "Tor TCP library"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rust-tor"
keywords = [ "crypto", "tor", "mimblewimble" ]
exclude = ["**/*.tor", "**/*.tor"]
edition = "2018"

[dependencies]

tor_util = { path = "../util", version = "0.0.1" }
tor_config = { path = "../config", version = "0.0.1" }
tor-proto = { path = "../tor-proto" }
tor-rtcompat = { path = "../tor-rtcompat", features=["tokio"] }
tor-linkspec = { path = "../tor-linkspec" }
tor-llcrypto = { path = "../tor-llcrypto" }
tor-cell = { path = "../tor-cell" }
tokio = "1.7.0"
asynchronous-codec = "0.6.0"

hex-literal = "0.3.1"
futures = "0.3.13"
