[package]
name = "rust_tor_util"
version = "0.0.1"
authors = ["BMW Developers"]
description = "rust-tor Errors"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rust-tor"
keywords = [ "crypto", "tor", "mimblewimble" ]
exclude = ["**/*.tor"]
edition = "2018"

[dependencies]

rust_tor_error = { path = "../error", version = "0.0.1" }

tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
hyper = "0.13"
hyper-rustls = "0.20"
hyper-timeout = "0.3"
futures = "0.3"
chrono = "0.4"
rand = "0.8.4"
