[package]
name = "tor_util"
version = "0.0.1"
authors = ["BMW Developers"]
description = "Tor Utilities"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rust-tor"
keywords = [ "crypto", "tor", "mimblewimble" ]
exclude = ["**/*.tor"]
edition = "2018"

[dependencies]

grin_store = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}
grin_core = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}
grin_util = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}

tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
hyper = "0.13"
hyper-rustls = "0.20"
hyper-timeout = "0.3"
futures = "0.3"
chrono = "0.4"
rand = "0.8.4"
failure = "0.1"
failure_derive = "0.1"
toml = "0.5.8"
